src/test/deca/syntax/invalid/homemade/test/test_pars_inv_instruction_primary_fonction_oubli_paren.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le printlnx
//
// Resultats:
//    Ligne 12 : Erreur oubli (
//    
//
// Historique:
//    cree le 04/01/2023

{
    iden iden);
}
